# sparker-orderbook

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  compose.yml  config.mainnet.json  config.testnet.json  stack.yml  supervisord.conf
.github/workflows/: ci.yml
api/: Cargo.toml  Dockerfile
api/src/: db.rs  main.rs  openapi.rs  order.rs  trade.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/market/: order.rs  trade.rs
core/src/repo/: order.rs  state.rs  trade.rs
core/src/types/order/: mod.rs  order_type.rs  status.rs
core/src/types/trade/: limit_type.rs  mod.rs
deploy/: .gitignore  stack.yml
entity/: Cargo.toml
entity/src/: lib.rs  order.rs  prelude.rs  sea_orm_active_enums.rs  state.rs  trade.rs
forge/: Cargo.toml
forge/helm/: Chart.yaml
forge/helm/templates/: _helpers.tpl
forge/src/: config.rs  dispatcher.rs  error.rs  main.rs
forge/src/pangea/: event.rs  indexer.rs
grpc/: Cargo.toml
grpc/helm/: values.yaml
grpc/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
grpc/helm/templates/tests/: test-connection.yaml
grpc/src/: db.rs  event.rs  main.rs
helm/api/: Chart.yaml  values.production.yaml  values.staging.yaml  values.yaml
helm/api/templates/: _helpers.tpl  cluster-database.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  static-secret-app.yaml  static-secret-registry.yaml
helm/api/templates/tests/: test-connection.yaml
helm/forge/: Chart.yaml  values.ethusdc.yaml  values.fueleth.yaml  values.fuelusdc.yaml  values.psychousdc.yaml  values.pzethusdc.yaml  values.usdcusdt.yaml  values.usdfusdc.yaml  values.usdteth.yaml  values.usdtusdc.yaml  values.wethusdc.yaml  values.yaml
helm/forge/templates/: _helpers.tpl  cluster-database.yaml  deployment.yaml  serviceaccount.yaml  static-secret-app.yaml  static-secret-registry.yaml
helm/grpc/: Chart.yaml  values.production.yaml  values.staging.yaml  values.yaml
helm/grpc/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  serviceaccount.yaml  static-secret-app.yaml  static-secret-registry.yaml
helm/orderbook/: Chart.yaml  values.yaml
helm/orderbook/templates/: _helpers.tpl  serviceaccount.yaml  static-secret-app.yaml  static-secret-registry.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20241101_130253_create_types.rs  m20241101_130314_create_orders.rs  m20241101_225432_create_trades.rs  m20241104_075814_create_state.rs  m20241203_152440_create_order_updates.rs  order.rs  state.rs  trade.rs
proto/: Cargo.toml  build.rs
proto/proto/: order.proto  orderbook.proto  types.proto
proto/src/: lib.rs
rpc/: Cargo.toml
rpc/proto/: order.proto
rpc/src/: lib.rs  main.rs
src/: config.rs  db.rs  dispatcher.rs  error.rs  events.rs  main.rs  operation.rs  store.rs  types.rs
src/api/: api.rs  app.rs  mod.rs  order.rs  trade.rs
src/models/: mod.rs  order.rs  trade.rs
src/pangea/: event.rs  indexer.rs  mod.rs
src/repo/: mod.rs  order.rs  state.rs  trade.rs
src/repos/: mod.rs  order.rs  state.rs  trade.rs
src/rpc/: server.rs
