[package]
name = "sparker-indexer"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [".", "api", "core", "entity", "migration", "proto"]

[workspace.dependencies]
sea-orm = "1.1.0"
serde = "1.0.210"
tokio = "1.4.0"
prost = "0.13"
tonic = "0.12.3"
tonic-types = "0.12.3"
utoipa = "5.1.3"
chrono = "0.4.38"
fuels = "0.66.9"
spark-market-sdk = { git = "https://github.com/compolabs/orderbook-contract.git", branch = "release-0.6.5" }
sparker-core = { path = "core" }
sparker-proto = { path = "proto" }
sparker-entity = { path = "entity" }

[dependencies]
sparker-core = { workspace = true, features = ["with-sea", "with-proto"] }
sparker-entity = { workspace = true }
sparker-proto = { workspace = true }
thiserror = "1.0.62"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
sea-orm = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
prost = { workspace = true }
tonic = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.5"
futures = "0.3.30"
strum = { version = "0.26", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.128"
fuels = { workspace = true, features = ["fuel-core-lib"] }
pangea-client = { git = "https://github.com/PangeaFoundation/pangea-client"}
ethers-core = "2.0.14"
rustc-hex = "2.1.0"
