[workspace]
resolver = "2"
members = ["forge", "api", "rpc", "core", "entity", "migration", "proto"]

[workspace.dependencies]
sea-orm = "1.1.0"
serde = "1.0.210"
tokio = "1.4.0"
tokio-stream = "0.1.16"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12.3"
utoipa = "5.1.3"
chrono = "0.4.38"
fuels = "0.66.9"
spark-market-sdk = { git = "https://github.com/vecheslav/orderbook-contract.git", branch = "release-0.6.5" }
sparker-core = { path = "core" }
sparker-proto = { path = "proto" }
sparker-entity = { path = "entity" }
