[package]
name = "sparker-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sparker-proto = { workspace = true, optional = true }
sparker-entity = { workspace = true, optional = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono"], optional = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
spark-market-sdk = { workspace = true }
sea-orm = { workspace = true, optional = true }

[features]
default = []
with-proto = ["sparker-proto"]
with-sea = ["sea-orm", "sparker-entity"]
with-utoipa = ["utoipa"]
