[package]
name = "sparker-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
sparker-core = { workspace = true, features = ["with-sea"] }
thiserror = "1.0.62"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { workspace = true }
sea-orm = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
chrono = { workspace = true, features = ["serde"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.5"
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
fuels = { workspace = true }
pangea-client = "0.3.2"
ethers-core = "2.0.14"
rustc-hex = "2.1.0"
